# swift-xet-rust-ffi

./: .gitignore  Package.swift  README.md
Rust/: Cargo.toml  build.rs  uniffi.toml
Rust/src/: lib.rs  swift_xet_rust.udl  xet_download.rs  xet_metadata.rs
Rust/uniffi-gen/: Cargo.toml
Rust/uniffi-gen/src/: main.rs
Scripts/: README.md  build-xcframework.sh  generate-bindings.sh
Sources/Xet/: swift_xet_rust.swift
Sources/XetFFI/: module.modulemap  swift_xet_rustFFI.h
Tests/XetTests/: XetClientTests.swift
XCFrameworks/SwiftXetRust.xcframework/: Info.plist
