[package]
name = "swift-xet-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "swift_xet_rust"
crate-type = ["staticlib", "cdylib"]

[dependencies]
hub_client = { git = "https://github.com/huggingface/xet-core", package = "hub_client" }
data = { git = "https://github.com/huggingface/xet-core", package = "data" }
xet_runtime = { git = "https://github.com/huggingface/xet-core", package = "xet_runtime" }
utils = { git = "https://github.com/huggingface/xet-core", package = "utils" }
progress_tracking = { git = "https://github.com/huggingface/xet-core", package = "progress_tracking" }
async-trait = "0.1"
uniffi = "0.29"
thiserror = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
once_cell = "1.19"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1
strip = true      # Strip symbols to reduce size
